2018-06-28  Timothy Hatcher  <timothy@apple.com>

        Focus ring color does not honor dark mode or system accent color.
        https://bugs.webkit.org/show_bug.cgi?id=187144
        rdar://problem/41105081

        Reviewed by Tim Horton.

        Pass the focus ring color through to the GraphicsContext methods that draw it.

        * platform/graphics/GraphicsContext.h:
        * platform/graphics/cocoa/GraphicsContextCocoa.mm:
        (WebCore::drawFocusRingAtTime):
        (WebCore::drawFocusRing):
        (WebCore::drawFocusRingToContext):
        (WebCore::drawFocusRingToContextAtTime):
        (WebCore::GraphicsContext::drawFocusRing):
        (WebCore::GraphicsContext::focusRingColor): Deleted.
        * platform/mac/ThemeMac.mm:
        (WebCore::drawCellFocusRingWithFrameAtTime):
        * rendering/RenderElement.cpp:
        (WebCore::RenderElement::paintFocusRing):
        * rendering/RenderImage.cpp:
        (WebCore::RenderImage::paintAreaElementFocusRing):

2018-06-28  Aditya Keerthi  <akeerthi@apple.com>

        REGRESSION (r232040): Cursor jumping in Safari text fields
        https://bugs.webkit.org/show_bug.cgi?id=187142
        <rdar://problem/41397577>

        Reviewed by Tim Horton.

        r232040 enabled click events to fire on nodes that are already being edited in
        iOS. This resulted FrameSelection::setSelection being called twice. One call
        originated from the UIWKTextInteractionAssistant, which snaps the caret to word
        boundaries. The other call originates from handleMousePressEvent in EventHandler,
        and uses character boundaries. Consequently, we see the caret jumping around.

        To fix this issue, an early return was added in the handleMousePressEvent
        codepath, which prevents FrameSelection::setSelection from being called when
        clicking on a node that is already being edited. This ensures that the