@@ -1,3 +1,15 @@
+2018-06-28  Chris Dumez  <cdumez@apple.com>
+
+        Unreviewed, rolling out r233309.
+
+        Invalidates previous database model without versioning
+
+        Reverted changeset:
+
+        "Fix encoding / decoding issues in ResourceLoadStatistics"
+        https://bugs.webkit.org/show_bug.cgi?id=186890
+        https://trac.webkit.org/changeset/233309
+
 2018-06-28  Timothy Hatcher  <timothy@apple.com>
 
         Focus ring color does not honor dark mode or system accent color.
